--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,6 @@ spring.datasource.password=truong0112
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
-spring.security.user.name=truong0112
-spring.security.user.password=truong0112
 
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
@@ -15,3 +13,10 @@ spring.security.user.password=truong0112
 spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
+
+#config view session
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
